2006-11-30  Werner Koch  <wk@g10code.com>

	* include/config.nsi.in: Add definitions for the english manuals.
	* configure.ac: Adjusted name of manual directory.
	* src/inst-man_novice_de.nsi: Ditto.
	* src/inst-man_advanced_de.nsi: Ditto.
	* src/inst-man_advanced_en.nsi: New.
	* src/inst-man_novice_en.nsi: New.
	* src/uninst-man_novice_en.nsi: New.
	* src/uninst-man_advanced_en.nsi: New.
	* src/inst-sections.nsi: Include the new installers sections.

2006-10-13  Werner Koch  <wk@g10code.com>

	Released 1.0.7.

	* patches/gnupg-1.4.5/01-uncompress.patch: New.

2006-08-28  Werner Koch  <wk@g10code.com>

	Released 1.0.6.
	
	* Makefile.am (EXTRA_DIST): Added missing patches for Claws.

	* packages/download.sh: Rewrote option parser.  New option
	--no-sig-check.

2006-08-04  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Replace sylpheed-claws 2.3.1 with
	2.4.0.
	* Makefile.am (EXTRA_DIST): Add
	patches/sylpheed-claws-2.4.0/01-w32-logo.patch,
	patches/sylpheed-claws-2.4.0/02-w32-icon.patch,
	patches/sylpheed-claws-2.4.0/03-plugins-symbols.patch,
	patches/sylpheed-claws-2.4.0/04-font-prefs.patch,
	patches/sylpheed-claws-2.4.0/05-textviewer.patch,
	patches/sylpheed-claws-2.4.0/99-auto.patch.

2006-08-03  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Add libiconv as a dependency for gnupg.
	* src/inst-sections.nsi: Likewise here.

2006-08-02  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Add jpeg packages.
	* src/inst-sections.nsi: Add jpeg support.
	* src/Makefile.am (gpg4win_bpkgs): Add jpeg.
	* src/inst-jpeg.nsi, src/uninst-jpeg.nsi: New file.
	* include/config.nsi.in: Add defines for jpeg.
	* configure.ac: Add new GnuWin32 package jpeg.  Add it as a
	dependency to sylpheed-claws.

2006-08-02  Werner Koch  <wk@g10code.com>

	Released 1.0.5.

2006-07-25  Werner Koch  <wk@g10code.com>

	Released 1.0.4.

	* src/installer-finish.nsi: Delete Sylpheed manual.

	* patches/gnupg-1.4.4/01-reopen-std.patch: New. 