@@ -19,7 +19,9 @@
 
 ACLOCAL_AMFLAGS = -I m4
 AUTOMAKE_OPTIONS = dist-bzip2
-DISTCHECK_CONFIGURE_FLAGS = --host=i586-mingw32msvc
+DISTCHECK_CONFIGURE_FLAGS = --host=i586-mingw32msvc \
+                            --disable-pkg-man_novice_en \
+                            --disable-pkg-man_advanced_en
 
 SUBDIRS = packages include doc src
 
