@@ -76,7 +76,9 @@ if test "$1" = "--build-w32"; then
         fi
     fi
 
-    ./configure --host=${host} --build=${build}  "$@"
+    ./configure --host=${host} --build=${build} \
+                --disable-pkg-man_novice_en     \
+                --disable-pkg-man_advanced_en  "$@"
     rc=$?
 
     exit $rc
