@@ -1,3 +1,7 @@
+2006-12-04  Brigitte Hamilton <gordianknits@gmail.com>  (wk)
+
+	* manual/what-is-gpg4win.tex: Did translation.
+
 2006-11-30  Brigitte Hamilton <gordianknits@gmail.com>  (wk)
 
 	* manual/novices.tex: Filled with content.
